--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Website Menu #1</title>
+    <title>didier luboya</title>
     <style>
       *{
        margin: 0;
