--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                         </li>
                                       <li class="timeline-item bg-white rounded ml-1 p-4 shadow">
                                           <div class="timeline-arrow"></div>
-                                          <h2 class="h5 mb-0">Advended JAVA Development</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>IIHT</span>
+                                          <h2 class="h5 mb-0">Advenced JAVA Development</h2><span class="small text-gray"><i class="fa fa-clock-o mr-1"></i>IIHT</span>
                                          
                                           
                                       </li>
