--- a/index.html
+++ b/index.html
@@ -533,6 +533,35 @@
           </div>
       </div>
     </div>
+    
+    <div class="col-md-4">
+      <div class="progress green">
+          <h3 class="progress-title">canva</h3>
+          <div class="progress-bar" style="width:70%; background:#21d4da;">
+              <div class="progress-value">70%</div>
+          </div>
+      </div>
+
+      <div class="progress green">
+          <h3 class="progress-title">AE</h3>
+          <div class="progress-bar" style="width:70%; background:#21d4da;">
+              <div class="progress-value">60%</div>
+          </div>
+      </div>
+      <div class="progress pink">
+        <h3 class="progress-title">AI</h3>
+        <div class="progress-bar" style="width:65%; background:#b3acdd;">
+            <div class="progress-value">65%</div>
+        </div>
+    </div>
+
+    <div class="progress pink">
+        <h3 class="progress-title">photoshop</h3>
+        <div class="progress-bar" style="width:63%; background:#b3acdd;">
+            <div class="progress-value">69%</div>
+        </div>
+    </div>
+  </div>
     </div>
 </div>
 </div></div>
@@ -576,6 +605,9 @@
       ></a>
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
       ><i class="icon-phone">+919739770708</i
+    ></a>
+    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      ><i class="icon-phone">+971582553869</i
     ></a>
     <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
     ><i  class="fa fa-envelope" aria-hidden="true">didierluboya7@gmail.com</i
