--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="row align-items-center">
             
             <div class="col-6 col-xl-2">
-              <h1 class="mb-0 site-logo"><a href="index.html">DL<span class="text-primary"></span> </a></h1>
+              <h1 class="mb-0 site-logo"><a href="index.html"><img src="images/logo.png" alt=""  style="width: 100%;"><span class="text-primary"></span> </a></h1>
             </div>
   
             <div class="col-12 col-md-10 d-none d-xl-block">
