--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="nav-wrapper">
         <ul class="nav nav-pills nav-fill flex-column flex-md-row capptit" id="tabs-icons-text" role="tablist">
             <li class="nav-item certexprtitle">
-                <a class="nav-link mb-sm-3 mb-md-0 pillbconcliv " style="background-color:transparent;" id="tabs-icons-text-1-tab" data-toggle="tab" href="#tabs-icons-text-1" role="tab" aria-controls="tabs-icons-text-1" aria-selected="true"><i class="ni ni-cloud-upload-96 mr-2"></i>Expereice</a>
+                <a class="nav-link mb-sm-3 mb-md-0 pillbconcliv " style="background-color:transparent;" id="tabs-icons-text-1-tab" data-toggle="tab" href="#tabs-icons-text-1" role="tab" aria-controls="tabs-icons-text-1" aria-selected="true"><i class="ni ni-cloud-upload-96 mr-2"></i>Experience</a>
             </li>
             <li class="nav-item certexprtitle">
                 <a class="nav-link mb-sm-3 mb-md-0 pillbconcliv" style="background-color: transparent;"  id="tabs-icons-text-2-tab" data-toggle="tab" href="#tabs-icons-text-2" role="tab" aria-controls="tabs-icons-text-2" aria-selected="false"><i class="ni ni-bell-55 mr-2"></i>certification</a>
